# lwe-task

./: .gitignore  CMakeLists.txt  README.md
include/: cipher_text.h  polynomial.h  secret_key.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_encryption.cpp  test_polynomial.cpp
